--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from datetime import datetime as dt\n",
-    "import zipfile"
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# ufo_data_path = \"Resources/nuforc_reports.csv\"\n",
-    "ufo_data_path = \"Resources/nuforc_reports.zip\"\n",
+    "ufo_data_path = \"Resources/nuforc_reports.csv\"\n",
     "ufo_kaggle_path = \"Resources/ufo_sighting_data.csv\""
    ]
   },
@@ -141,10 +141,14 @@
     }
    ],
    "source": [
-    "nuforc_df = pd.read_csv('Resources/nuforc_reports.zip', compression='zip')\n",
+    "# Import the ufo data from Data.world and drop N/A's\n",
+    "nuforc_df = pd.read_csv(ufo_data_path)\n",
     "nuforc_df.dropna(axis = 0, how = \"any\", inplace=True)\n",
+    "\n",
+    "# Define which columns to keep in the dataframe\n",
     "nuforc_df = nuforc_df[['date_time', 'city', 'state', 'shape', 'duration', 'summary', 'city_latitude', 'city_longitude']]\n",
     "\n",
+    "# Rename column headings\n",
     "nuforc_df.rename(columns={'date_time' : 'date_time',\n",
     "                              'city' : 'city',\n",
     "                              'state' : 'state',\n",
@@ -155,6 +159,7 @@
     "                              'city_longitude' : 'longitude'\n",
     "                             }, inplace=True)\n",
     "\n",
+    "# Format fields\n",
     "nuforc_df['state'] = nuforc_df['state'].str.upper()\n",
     "nuforc_df['city'] = nuforc_df['city'].str.title()\n",
     "\n",
@@ -308,6 +313,7 @@
     "                              'longitude' : 'longitude'\n",
     "                             }, inplace=True)\n",
     "\n",
+    "# Format fields \n",
     "kaggle_ufo_df['state'] = kaggle_ufo_df['state'].str.upper()\n",
     "kaggle_ufo_df['city'] = kaggle_ufo_df['city'].str.title()\n",
     "\n",
@@ -432,17 +438,16 @@
     }
    ],
    "source": [
+    "# Join the two dataframes together into one\n",
     "ufo_df = pd.concat(objs = [nuforc_df, kaggle_ufo_df], ignore_index = True)\n",
     "ufo_df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ufo_df.to_csv(\"Resources/ufo_df.csv\")"
+    "### Connect to PostgreSQL database"
    ]
   },
   {
@@ -450,42 +455,64 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rds_connection_string = \"postgres:password@localhost:5432/ufo_db\"\n",
+    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'engine' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-24b0e0129c1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Check to see if the table name exists\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtable_names\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'engine' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Check to see if the table name exists\n",
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export the DataFrame to SQL"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ufo_df.to_sql(name='ufo_data', con=engine, if_exists='replace', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify that the data can be read into a DataFrame from SQL"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "pd.read_sql_query('select * from ufo_data', con=engine).head()"
+   ]
   },
   {
    "cell_type": "code",
