--- a/ufo_data.ipynb
+++ b/ufo_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "6  Description is the same as Washington DC event...  32.259941 -110.927542  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,19 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'engine' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-24b0e0129c1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Check to see if the table name exists\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mengine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtable_names\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'engine' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['ufo_data']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -491,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,9 +506,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>ufo_shape</th>\n",
+       "      <th>encounter_duration</th>\n",
+       "      <th>encounter_summary</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-12-12T18:43:00</td>\n",
+       "      <td>Chester</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>light</td>\n",
+       "      <td>5 seconds</td>\n",
+       "      <td>My wife was driving southeast on a fairly popu...</td>\n",
+       "      <td>37.34315151515153</td>\n",
+       "      <td>-77.408582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-03-22T18:30:00</td>\n",
+       "      <td>Rocky Hill</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>circle</td>\n",
+       "      <td>3-5 seconds</td>\n",
+       "      <td>I think that I may caught a UFO on the NBC Nig...</td>\n",
+       "      <td>41.66480000000001</td>\n",
+       "      <td>-72.639300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-04-17T02:00:00</td>\n",
+       "      <td>Ottawa</td>\n",
+       "      <td>ON</td>\n",
+       "      <td>teardrop</td>\n",
+       "      <td>10 seconds</td>\n",
+       "      <td>I was driving towards the intersection of fall...</td>\n",
+       "      <td>45.38138250000021</td>\n",
+       "      <td>-75.708501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-04-02T20:25:00</td>\n",
+       "      <td>Kirbyville</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>disk</td>\n",
+       "      <td>15 minutes</td>\n",
+       "      <td>The object has flashing lights that are green,...</td>\n",
+       "      <td>30.6772</td>\n",
+       "      <td>-94.005200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-05-01T11:00:00</td>\n",
+       "      <td>Tucson</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5 minutes</td>\n",
+       "      <td>Description is the same as Washington DC event...</td>\n",
+       "      <td>32.259940756602376</td>\n",
+       "      <td>-110.927542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             date_time        city state ufo_shape encounter_duration  \\\n",
+       "0  2019-12-12T18:43:00     Chester    VA     light          5 seconds   \n",
+       "1  2019-03-22T18:30:00  Rocky Hill    CT    circle        3-5 seconds   \n",
+       "2  2019-04-17T02:00:00      Ottawa    ON  teardrop         10 seconds   \n",
+       "3  2019-04-02T20:25:00  Kirbyville    TX      disk         15 minutes   \n",
+       "4  2019-05-01T11:00:00      Tucson    AZ   unknown          5 minutes   \n",
+       "\n",
+       "                                   encounter_summary            latitude  \\\n",
+       "0  My wife was driving southeast on a fairly popu...   37.34315151515153   \n",
+       "1  I think that I may caught a UFO on the NBC Nig...   41.66480000000001   \n",
+       "2  I was driving towards the intersection of fall...   45.38138250000021   \n",
+       "3  The object has flashing lights that are green,...             30.6772   \n",
+       "4  Description is the same as Washington DC event...  32.259940756602376   \n",
+       "\n",
+       "    longitude  \n",
+       "0  -77.408582  \n",
+       "1  -72.639300  \n",
+       "2  -75.708501  \n",
+       "3  -94.005200  \n",
+       "4 -110.927542  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.read_sql_query('select * from ufo_data', con=engine).head()"
    ]
